fixing checkbox style on safari

--- a/css/style.scss
+++ b/css/style.scss
@@ -17790,6 +17790,11 @@ li.mobile-sub-toggle ul.mobile-sub-menu{
       width: 15px;
       height: 15px;
       margin: 0 5px 0 0;
+      border: none;
+      padding: 0;
+      vertical-align: initial;
+      border-radius: initial;
+      outline: initial;
    }
 
    .checkbox-label {
